made changes fr